2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/vectors.S: Respect initial MMU settings when handling interrupts
	and exceptions.  Previously, the code would always reenable the MMU,
	even if it wasn't on when the interrupt occurred.

	* include/hal_io.h: Allow variants to provide I/O definitions

	* cdl/hal_powerpc.cdl: Allow override of CYGHWR_HAL_POWERPC_ENABLE_MMU

2003-08-28  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c: New file - architecture level
	support for booting Linux kernel from RedBoot.

	* cdl/hal_powerpc.cdl: Linux booting from RedBoot is 
	now supported at the architecture level.  Changes to support 
	architecture/platform layering.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_intr.c (hal_IRQ_init): Precalculate clock tick per
	microsecond (us) ratio to reduce overheads in delay.  Without
	this, delays of small numbers of microseconds were inaccurate.

2003-08-06  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>

	* src/vectors.S (cyg_hal_default_interrupt_vsr): Removed ifdef on
	CYGFUN_HAL_COMMON_KERNEL_SUPPORT around call to	interrupt_end().

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* src/powerpc.ld: 
	Added .eh_frame to data section. This is a stopgap fix to allow
	C++ programs that define exceptions to link and run. It does not
	allow them to actually throw exceptions, since that depends on
	compiler changes that have not been made. Further, more
	far-reaching, linker script changes will also be needs when that
	happens.
	Added libsupc++.a to GROUP() directive for GCC versions later than
	3.0.

2003-03-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/hal_arch.h (HAL_THREAD_INIT_CONTEXT): Initialize
	what would be FP and LR in the previous stack frame to make
	GDB backtraces happy.

2003-01-03  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_mem.h (CYGARC_MEMDESC_NOCACHE_PA): New macro which
	allows defining non-cached space with non 1-1 mapping.
